tests/rosetta/transpiler/Swift/add-a-variable-to-a-class-instance-at-runtime.error
exit status 1
/tmp/TestSwiftTranspiler_Rosetta_Golden1761724019/001/main.swift:8:66: error: type 'Any' does not conform to protocol 'Hashable'
 6 | }
 7 | func main() {
 8 |     var ss = (SomeStruct(runtimeFields: ([] as [String: Any] as! [Any: Any])) as! SomeStruct)
   |                                                                  `- error: type 'Any' does not conform to protocol 'Hashable'
 9 |     print("Create two fields at runtime: \n")
10 |     var i = 1

/tmp/TestSwiftTranspiler_Rosetta_Golden1761724019/001/main.swift:8:62: error: cannot convert value of type '[Any : Any]' to expected argument type '[String : String]'
 6 | }
 7 | func main() {
 8 |     var ss = (SomeStruct(runtimeFields: ([] as [String: Any] as! [Any: Any])) as! SomeStruct)
   |                                                              |- error: cannot convert value of type '[Any : Any]' to expected argument type '[String : String]'
   |                                                              |- note: arguments to generic parameter 'Key' ('Any' and 'String') are expected to be equal
   |                                                              `- note: arguments to generic parameter 'Value' ('Any' and 'String') are expected to be equal
 9 |     print("Create two fields at runtime: \n")
10 |     var i = 1

/tmp/TestSwiftTranspiler_Rosetta_Golden1761724019/001/main.swift:8:42: error: use [:] to get an empty dictionary literal
 6 | }
 7 | func main() {
 8 |     var ss = (SomeStruct(runtimeFields: ([] as [String: Any] as! [Any: Any])) as! SomeStruct)
   |                                          `- error: use [:] to get an empty dictionary literal
 9 |     print("Create two fields at runtime: \n")
10 |     var i = 1

/tmp/TestSwiftTranspiler_Rosetta_Golden1761724019/001/main.swift:8:62: warning: forced cast from '[String : Any]' to '[Any : Any]' always succeeds; did you mean to use 'as'?
 6 | }
 7 | func main() {
 8 |     var ss = (SomeStruct(runtimeFields: ([] as [String: Any] as! [Any: Any])) as! SomeStruct)
   |                                                              `- warning: forced cast from '[String : Any]' to '[Any : Any]' always succeeds; did you mean to use 'as'?
 9 |     print("Create two fields at runtime: \n")
10 |     var i = 1

/tmp/TestSwiftTranspiler_Rosetta_Golden1761724019/001/main.swift:8:79: warning: forced cast of 'SomeStruct' to same type has no effect
 6 | }
 7 | func main() {
 8 |     var ss = (SomeStruct(runtimeFields: ([] as [String: Any] as! [Any: Any])) as! SomeStruct)
   |                                                                               `- warning: forced cast of 'SomeStruct' to same type has no effect
 9 |     print("Create two fields at runtime: \n")
10 |     var i = 1

/tmp/TestSwiftTranspiler_Rosetta_Golden1761724019/001/main.swift:21:27: warning: forced cast of 'Int' to same type has no effect
19 |         ss.runtimeFields = (fields as! [String: String])
20 |         print("\n")
21 |         i = ((Int(i) + 1) as! Int)
   |                           `- warning: forced cast of 'Int' to same type has no effect
22 |     }
23 |     while true {
