tests/rosetta/transpiler/Swift/add-a-variable-to-a-class-instance-at-runtime.swift
// Generated by Mochi transpiler v0.10.39 on 2025-07-24 13:19:54 GMT+7
import Foundation

struct SomeStruct {
    var runtimeFields: [String: String]
}
func main() {
    var ss = (SomeStruct(runtimeFields: ([] as [String: Any] as! [Any: Any])) as! SomeStruct)
    print("Create two fields at runtime: \n")
    var i = 1
    while (Int(i) <= 2) {
        print((("  Field #" + String(String(describing: Int(i)))) + ":\n"))
        print("       Enter name  : ")
        let name = (readLine() ?? "")
        print("       Enter value : ")
        let value = (readLine() ?? "")
        var fields = (ss.runtimeFields as! [String: String])
        fields[String(name)] = String(value)
        ss.runtimeFields = (fields as! [String: String])
        print("\n")
        i = ((Int(i) + 1) as! Int)
    }
    while true {
        print("Which field do you want to inspect ? ")
        let name = (readLine() ?? "")
        if (ss.runtimeFields[String(name)] != nil) {
            let value = String(ss.runtimeFields[String(name)]!)
            print((("Its value is '" + String(value)) + "'"))
            return
        } else {
            print("There is no field of that name, try again\n")
        }
    }
}
main()
